# ecash-402-wallet

./: Cargo.toml
crates/: Cargo.toml
crates/nip60/: Cargo.toml
crates/nip60-cli/: Cargo.toml
crates/nip60-cli/src/: main.rs
crates/nip60-tui/: Cargo.toml
crates/nip60-tui/src/: lib.rs  main.rs
crates/nip60-tui/src/tui/: mod.rs  state.rs
crates/nip60-tui/src/tui/widgets/: add_wallet.rs  history.rs  wallet_manager.rs
crates/nip60/src/: error.rs  lib.rs  nip60.rs
crates/wallet/: Cargo.toml
crates/wallet/src/: crypto.rs  lib.rs  lightning.rs  mint.rs  models.rs  multimint.rs
examples/: lightning_topup_example.rs  mint_client.rs  mint_info_example.rs  nip60_cli.rs  redeem_test.rs  tui_example.rs  wallet.rs
src/: crypto.rs  error.rs  lib.rs  lightning.rs  mint.rs  models.rs  multimint.rs  nip60.rs  wallet.rs  wallet_operations.rs
src/tui/: app.rs  config.rs  events.rs  state.rs
src/tui/widgets/: history.rs  lightning.rs  main.rs  mod.rs  redeem.rs  send.rs
