[package]
name = "ecash-402-wallet"
version = "0.1.7"
edition = "2024"
description = "ecash 402 wallet"
license = "GPL-3.0"

[dependencies]
serde = {version = "1.0", features = ["derive"]}
derive_more = {version = "2.0", features = ["from"]}
cdk = { version="0.9.2", default-features = false, features = ["wallet", "mint"] }
cdk-redb = { version="0.9.2", default-features = false, features = ["wallet"] }
bip39 = { version = "2.1.0", features = ["rand"] }
home = "0.5.11"
