[package]
name = "ecash-402-wallet"
version = "0.1.10"
edition = "2024"
description = "ecash 402 wallet"
license = "GPL-3.0"

[dependencies]
serde = {version = "1.0", features = ["derive"]}
derive_more = {version = "2.0", features = ["from"]}
cdk = { version="0.10", default-features = false, features = ["wallet"] }
cdk-redb = { version="0.10", default-features = false, features = ["wallet"] }

bip39 = { version = "2.1.0", features = ["rand"] }
home = "0.5.11"


tokio = "1.45"
rand = "0.9"
anyhow = "1.0"

