[package]
name = "ecash-402-wallet"
version = "0.1.12"
edition = "2024"
description = "ecash 402 wallet"
license = "GPL-3.0"

[dependencies]
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
derive_more = {version = "2.0", features = ["from"]}
cdk = { version="0.10", default-features = false, features = ["wallet", "mint"] }
cdk-redb = { version="0.10", default-features = false, features = ["wallet"] }
cdk-sqlite = { version="0.10", default-features = false, features = ["wallet"] }

bip39 = { version = "2.1.0", features = ["rand"] }
home = "0.5.11"


tokio = "1.45"
rand = "0.9"
anyhow = "1.0"


chrono = "0.4"
nostr-sdk = { version = "0.42", features = ["nip44"] }
cashu = "0.11"
clap = { version = "4.0", features = ["derive"] }
base64 = "0.22"
serde_yaml = "0.9"
dirs = "5.0"
reqwest = { version = "0.12", features = ["json"] }
url = "2.5"
sha2 = "0.10"
secp256k1 = { version = "0.29", features = ["rand"] }
hex = "0.4"
md5 = "0.8"

ratatui = "0.29"
crossterm = "0.28"
qrcode = "0.14"
arboard = "3.4"
