[workspace]

resolver = "2"
members = [ "nip60", "wallet", "nip60-cli","nip60-tui"]

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/ecash-402/ecash-402-wallet.git"
version = "0.1.23"
readme = "README.md"

[workspace.dependencies]
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
derive_more = {version = "2.0", features = ["from"]}
cdk = { version="0.11", default-features = false, features = ["wallet", "mint"] }
cdk-sqlite = { version="0.11", default-features = false, features = ["wallet"] }

bip39 = { version = "2.1.0", features = ["rand"] }
home = "0.5.11"


tokio = "1.45"
rand = "0.9"
anyhow = "1.0"


chrono = "0.4"
nostr-sdk = { version = "0.43", features = ["nip44"] }
cashu = "0.11"
clap = { version = "4.0", features = ["derive"] }
base64 = "0.22"
serde_yaml = "0.9"
dirs = "6.0"
reqwest = { version = "0.12", features = ["json"] }
url = "2.5"
sha2 = "0.10"
secp256k1 = { version = "0.31", features = ["rand"] }
hex = "0.4"
md5 = "0.8"
