[package]
name = "nip60-cli"
version.workspace = true
description = "nip-60 cli"
license.workspace = true
repository.workspace = true
edition.workspace = true
readme = "README.md"

[dependencies]
nip60 = {path="../nip60/"}
ecash-402-wallet = {path="../wallet/"}

serde.workspace = true
serde_json.workspace = true
derive_more.workspace = true
cdk.workspace = true


tokio.workspace = true

nostr-sdk.workspace = true
cashu.workspace = true
clap.workspace = true
serde_yaml.workspace = true
dirs.workspace = true
