[package]
name = "nip60"
version.workspace = true
description = "nip-60 wallet"
license.workspace = true
repository.workspace = true
edition.workspace = true
readme = "README.md"

[dependencies]
ecash-402-wallet = {path="../wallet/"}

serde.workspace = true
serde_json.workspace = true
derive_more.workspace = true
cdk.workspace = true
cdk-sqlite.workspace = true

bip39.workspace = true
home.workspace = true


tokio.workspace = true
rand.workspace = true
anyhow.workspace = true


chrono.workspace = true
nostr-sdk.workspace = true
cashu.workspace = true
clap.workspace = true
base64.workspace = true
serde_yaml.workspace = true
dirs.workspace = true
reqwest.workspace = true
url.workspace = true
sha2.workspace = true
secp256k1.workspace = true
hex.workspace = true
md5.workspace = true

